<resources>
    <string name="app_name">Book Store</string>
    <string name="delete_all_books">Delete All</string>

    <string name="row_not_saved_error_message">ERROR: Record Not Saved</string>
    <string name="row_saved_successfully_message">Record Saved Successfully</string>
    <string name="sale">Sale</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="supplier_name">Supplier name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="book_name">Book Name</string>
    <string name="call_supplier">Call Supplier</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="input_book_name">Input book name</string>
    <string name="input_book_price">Input book price</string>
    <string name="input_book_quantity">Input book quantity</string>
    <string name="input_supplier_name">Input supplier name</string>
    <string name="input_supplier_phone">Input supplier phone</string>
    <string name="click_on_to_add_a_book">Click on + to add a book</string>
    <string name="insert_dummy_book">Insert dummy book</string>
    <string name="add_a_book">Add a book</string>
    <string name="edit_book">Edit Book</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="dollar"> $</string>
    <string name="supplier_phone">Supplier phone</string>
    <string name="product_name">Product name</string>

</resources>
