<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    card_view:cardCornerRadius="@dimen/dp12">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp8">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_book_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp16"
            tools:text="Insert book name" />

        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_book_name"
            android:text="@string/quantity"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_book_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_quantity"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp12"
            tools:text="Insert quantity" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_book_quantity"
            android:text="@string/price"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_dollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_book_price"
            android:layout_below="@id/tv_price"
            android:gravity="center"
            android:text="@string/dollar"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp12"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_book_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_price"
            android:layout_toEndOf="@id/tv_dollar"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp16"
            tools:text="Insert price" />

        <Button
            android:id="@+id/btn_sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_book_price"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text="@string/sale"
            android:textSize="@dimen/sp16" />

    </RelativeLayout>
</android.support.v7.widget.CardView>
